--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 <body>
 <div class="container">
     <div class="form-group mt-5">
-        <label for="select-control">Select form</label>
-        <select class="form-control" id="select-control">
-            <option>-</option>
-        </select>
+        <label for="cont">Select form</label>
+        <input type="file" id="cont">
     </div>
     <div class="forms-control" id="data-info"></div>
 </div>
